@@ -21,5 +21,4 @@
 public class TimeoutIntents {
 	public static final String START = "com.android.keepass.timeout.start";
 	public static final String CANCEL = "com.android.keepass.timeout.cancel";
-	public static final String LOCK = "com.android.keepass.timeout.lock";
 }
