@@ -1,5 +1,10 @@
+KeePassDroid (0.4.1)
+  * Fix timeout locking crashes
+  * Fix lock from search screen.
+
 KeePassDroid (0.4)
   * Support adding groups
+  
 KeePassDroid (0.3.4)
   * Add context menus
   * Deal with crash when resuming activity after the process has been killed
